--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -126,7 +126,7 @@
   vertical-align: top;
   width: 86px;
   height: 86px;
-  border: 1px solid #000000;
+  border: 1px solid #fefefe;
 
   @include breakpoint($large) {
     display: block;
