--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -126,7 +126,7 @@
   vertical-align: top;
   width: 86px;
   height: 86px;
-  border: 13px solid #fefefe;
+  border: 13px solid #da0d0d;
 
   @include breakpoint($large) {
     display: block;
@@ -136,7 +136,7 @@
 
   img {
     max-width: 180px;
-    border-radius: 40%;
+    border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
