--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -90,4 +90,4 @@ layout: default
   {% elsif page.id and page.related %}
   {% include page__related.html posts=site.posts %}
   {% endif %}
-</div> 111
+</div>
