--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,7 +60,7 @@ layout: default
           </nav>
         </aside>
         {% endif %}
-        {{ content }} 11
+        00{{ content }} 11
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{
             site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
