--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size: 2px !default;
+$doc-font-size: 16px !default;
 $doc-font-size-medium: $doc-font-size * 1.125 !default;
 $doc-font-size-large: $doc-font-size * 1.25 !default;
 $doc-font-size-x-large: $doc-font-size * 1.375 !default;
@@ -37,14 +37,14 @@ $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
-$type-size-1: 2.441em !default; // ~39.056px
-$type-size-2: 1.953em !default; // ~31.248px
-$type-size-3: 1.563em !default; // ~25.008px
-$type-size-4: 1.25em !default; // ~20px
-$type-size-5: 1em !default; // ~16px
-$type-size-6: 0.75em !default; // ~12px
-$type-size-7: 0.6875em !default; // ~11px
-$type-size-8: 0.625em !default; // ~10px
+$type-size-1: 0.441em !default; //2.441em !default; // ~39.056px
+$type-size-2: 0.441em !default; //1.953em !default; // ~31.248px
+$type-size-3: 0.441em !default; //1.563em !default; // ~25.008px
+$type-size-4: 0.441em !default; //1.25em !default; // ~20px
+$type-size-5: 0.441em !default; //1em !default; // ~16px
+$type-size-6: 0.441em !default; //0.75em !default; // ~12px
+$type-size-7: 0.441em !default; //0.6875em !default; // ~11px
+$type-size-8: 0.441em !default; //0.625em !default; // ~10px
 
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
